--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="container">
         <header>
-            <img src="logo.jpg" alt="Web Studio" width="30"/>
+            <img src="images/Logo.jpg" alt="Web Studio" width="30"/>
         <nav>
             <ul>
             <li><a href="index.html">Studio</a></li>
@@ -46,9 +46,9 @@
                 <section>
                 <h2>What are we doing</h2>
                 <div>
-                    <img src="img1.jpg" alt="PC" width="30">
-                    <img src="img2.jpg" alt="Screen" width="30">
-                    <img src="img3.jpg" alt="Mobile" width="30">
+                    <img src="images/img 1 .jpg" alt="PC" width="30">
+                    <img src="images/img 2.jpg" alt="Screen" width="30">
+                    <img src="images/img 3.jpg" alt="Mobile" width="30">
                 </div>
         </section>
         </div>
@@ -57,16 +57,16 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <a href="#"><img src="img4.jpg" alt="Mark Guerrero" width="30"> Product Designer</a>
+                    <a href="#"><img src="images/img 4.jpg" alt="Mark Guerrero" width="30"> Product Designer</a>
                 </li>
                 <li>
-                    <a href="#"><img src="img5.jpg" alt="Tom Ford" width="30"> Frontend Developer</a>
+                    <a href="#"><img src="images/img 5.jpg" alt="Tom Ford" width="30"> Frontend Developer</a>
                 </li>
                 <li>
-                    <a href="#"><img src="img6.jpg" alt="Camila Garcia" width="30"> Marketing</a>
+                    <a href="#"><img src="images/img 6.jpg" alt="Camila Garcia" width="30"> Marketing</a>
                 </li>
                 <li>
-                    <a href="#"><img src="img7.jpg" alt="Daniel Wilson" width="30"> UI Designer</a>
+                    <a href="#"><img src="images/img 7.jpg" alt="Daniel Wilson" width="30"> UI Designer</a>
                 </li>
             </ul>
         </section>
